--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,17 +1,10 @@
-server.port=8622
-
-# Local DB
-self.db_server=localhost
-self.db_database=postgres
-self.db_port=5432
-spring.datasource.username=postgres
-spring.datasource.password=mysecretpassword
+server.port=8111
 
 spring.jpa.show-sql=true
 
 
-## Kafka
-self.bootstrapServers=localhost:9094
-
-
-cptls.s3.files.region=eu-west-1
+server.url.common-eq.financing-terms-service=http://localhost:8913
+server.url.common-eq.payment-schedule-service=http://localhost:8911
+server.url.common-eq.notes.service=http://localhost:8751
+server.url.common-eq.advance.service=http://localhost:8918
+server.url.common-eq.cpi-envelope.service=http://localhost:8923
