--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,14 @@
 SERVICE_NAME=cptls-ay-debug-tool
-spring.profiles.active=dev
+server.port=8111
+#spring.profiles.active=dev
+#spring.profiles.active=edge2
+spring.profiles.active=qa-euw1
+#spring.profiles.active=qa3
 
-spring.datasource.hikari.schema=md
+self.eq-common-financing-terms-service.url=${server.url.common-eq.financing-terms-service}
 
-## flyway
-spring.flyway.enabled=true
-spring.flyway.table=flyway_schema_history_cptls_market_data_websocket_fetcher
-spring.flyway.schemas=${spring.datasource.hikari.schema}
-spring.flyway.locations=classpath:/db/migration
-
-
-qa.environment.profiles=eq-uat,qa-euw1,qa-usw2,dev,auto,auto2,auto3,compose,edge2,pre-uat,pre-uat2,pre-prod,pre-prod2,bidev,uat,dr,edge2
-
-## Audit
-cptls.audit.product.name=md
-cptls.audit.service.name=cptls-ay-debug-tool
-cptls.audit_trail.topic=CPTLS_AUDIT_TRAIL
-management.tracing.enabled=true
+server.url.common-eq.financing-terms-service=http://eq-common-financing-terms-service.%s-ingress.capitol.is
+server.url.common-eq.payment-schedule-service=http://eq-common-payment-schedule-service.%s-ingress.capitol.is/
+server.url.common-eq.notes.service=http://eq-common-notes-service.%s-ingress.capitol.is/
+server.url.common-eq.advance.service=http://eq-common-advance-service.%s-ingress.capitol.is/
+server.url.common-eq.cpi-envelope.service=http://eq-cpi-envelope-service.%s-ingress.capitol.is/
